TipTip z-index bugfix

--- a/appengine/static/css/screen.less
+++ b/appengine/static/css/screen.less
@@ -389,6 +389,7 @@ img.spinner {
 
 /* DROPDOWN */
 .dropdown {
+    z-index: 9999;
     display: none;
     position: fixed;
     top: 0px;
